--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -206,29 +206,29 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#限制配置#-#-#-#-#-#-#-#-#-#-#-#
-#<limits> 标记定义用户可配置字段的最大长度
-<limits maxaway="200"
-        maxchan="60"
+#<limits> 标记定义用户可配置字段最大长度
+<limits maxaway="390"
+        maxchan="64"
         maxhost="70"
         maxkey="30"
-        maxkick="300"
+        maxkick="390"
         maxmodes="20"
-        maxnick="30"
+        maxnick="32"
         maxquit="300"
-        maxreal="130"
-        maxtopic="330"
+        maxreal="150"
+        maxtopic="390"
         maxuser="10">
-#maxaway =离开消息的最大长度.
-#maxchan =频道名称的最大长度.
-#maxhost =主机名的最大长度.
-#maxkey =通道键的最大长度.
-#maxkick =kick消息的最大长度.
-#maxmodes =在单个MODE消息中可以更改的无标志模式的最大数量.
-#maxnick =昵称的最大长度.
-#maxquit =退出消息的最大长度.
-#maxreal =真实的名称的最大长度 (gecos).
-#maxtopic =频道主题的最大长度.
-#maxuser =用户名的最大长度.
+#maxaway =离开消息.
+#maxchan =频道名称.
+#maxhost =主机名.
+#maxkey =通频道密钥.
+#maxkick =踢出消息.
+#maxmodes =单个MODE消息中可修改的非标记模式的最大数量.
+#maxnick =昵称.
+#maxquit =退出消息.
+#maxreal =真实的名称.
+#maxtopic =频道主题.
+#maxuser =用户名.
 
 
 #<insane>标记定义了限制,以防止创建过宽的X线.此标记只能定义一次.
