--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -34,13 +34,13 @@
        class=""
        invalidchar="strip"
        length="32"
-       prefix="AFENet/"
-       suffix=""
+       prefix=""
+       suffix="/AFENet"
        sanitize="yes">
 <cloak method="hmac-sha256"
        key="5LdTybtvP945DLgyHiMWVxti94hcJO"
-       prefix="AFENet"
-       suffix="IP"
+       prefix=""
+       suffix="/AFENet"
        case="lower"
        hostparts="1"
        pathparts="0"
