--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -35,12 +35,12 @@
        invalidchar="strip"
        length="32"
        prefix=""
-       suffix="/AFENet"
+       suffix="AFENet"
        sanitize="yes">
 <cloak method="hmac-sha256"
        key="5LdTybtvP945DLgyHiMWVxti94hcJO"
        prefix=""
-       suffix="/AFENet"
+       suffix="AFENet"
        case="lower"
        hostparts="1"
        pathparts="0"
