更新配置文件，启用RELAYMSG命令并添加相关配置以支持消息中继功能

--- a/ARKFUTURE/CONFIG/ergoircd/ircd.yaml
+++ b/ARKFUTURE/CONFIG/ergoircd/ircd.yaml
@@ -76,7 +76,8 @@ server:
     motd: motd.txt  
  
     motd-formatting: true 
- 
+    
+    #使用RELAYMSG命令进行中继
     relaymsg:
         enabled: true 
         separators: "/"
