更新配置文件，设置本地服务器名称为arkfuture.test

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -21,7 +21,7 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<server>标签定义了本地服务器的设置.此标记只能定义一次.
-<server name=""
+<server name="arkfuture.test"
         description="ARKFUTURE-NET"
         network="ARKFUTURE"
         id="0AF">
