更新配置文件，添加新的服务器监听端口和更新HybridIRC及Rizon的连接设置

--- a/ARKFUTURE/CONFIG/other/irssi.conf
+++ b/ARKFUTURE/CONFIG/other/irssi.conf
@@ -24,8 +24,16 @@ servers = (
     tls_cert = "";
   },
   {
-    address = "irc.undernet.org ";
-    chatnet = "Undernet";
+    address = "irc.hybridirc.org";
+    chatnet = "HybridIRC";
+    port = "6697";
+    use_tls = "yes";
+    tls_verify = "yes";
+    tls_cert = "";
+  },
+    {
+    address = "irc.rizon.net";
+    chatnet = "Rizon";
     port = "6697";
     use_tls = "yes";
     tls_verify = "yes";
@@ -64,7 +72,16 @@ chatnets = {
     max_msgs = "20";
     max_whois = "30";
   };
-  Undernet = {
+  HybridIRC = {
+    type = "IRC";
+    max_kicks = "4";
+    max_msgs = "20";
+    max_whois = "30";
+    sasl_mechanism = "PLAIN";
+    sasl_username = "";
+    sasl_password = "";
+  };
+  Rizon = {
     type = "IRC";
     max_kicks = "4";
     max_msgs = "20";
@@ -88,6 +105,8 @@ channels = (
   { name = "#lobby"; chatnet = "ARKFUTURE"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "LiberaChat"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "OFTC"; autojoin = "No"; },
+  { name = "#lobby"; chatnet = "HybridIRC"; autojoin = "No"; },
+  { name = "#lobby"; chatnet = "Rizon"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "Undernet"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "Hackint"; autojoin = "No"; },
 );
