--- a/ARKFUTURE/CONFIG/ergoircd/ircd.yaml
+++ b/ARKFUTURE/CONFIG/ergoircd/ircd.yaml
@@ -15,20 +15,21 @@ server:
         ":6667":
         ":6668":
         ":6669":
-        ":6697":
-            tls:
-                cert: fullchain.pem
-                key: key.pem
-            # 'proxy'通常应为false。用于总是发送PROXY协议头的云负载均衡器,
-            # 详见手册("反向代理")
-            proxy: false
-            min-tls-version: 1.2
-        ":8097":
-            websocket: true
-            tls:
-                cert: fullchain.pem
-                key: key.pem
-                min-tls-version: 1.2
+        # ":6697":
+        #     tls:
+        #         cert: fullchain.pem
+        #         key: key.pem
+        #     # 'proxy'通常应为false。用于总是发送PROXY协议头的云负载均衡器,
+        #     # 详见手册("反向代理")
+        #     proxy: false
+        #     min-tls-version: 1.2
+        
+        # ":8097":
+        #     websocket: true
+        #     tls:
+        #         cert: fullchain.pem
+        #         key: key.pem
+        #         min-tls-version: 1.2
 
         # Unix域套接字示例:
         # "/tmp/ergo_sock":
