添加连接配置的模式设置，增强连接安全性

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -62,6 +62,7 @@
          password=""
          hash="bcrypt"
          usecloak="yes"
+         modes="+cixrS"
          motd="motd">  
 
 <connect name="Basic"
