更新连接配置，修改Basic连接的模式设置以增强安全性

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -62,7 +62,7 @@
          password=""
          hash="bcrypt"
          usecloak="yes"
-         modes="+cixrS"
+         modes="+cixwS"
          motd="motd">  
 
 <connect name="Basic"
