更新HAProxy配置，删除旧的haproxy.cfg文件并添加新的配置文件，重构inspircd.conf以支持最新的配置结构

--- a/ARKFUTURE/CONFIG/inspircd/haproxyconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/haproxyconf/inspircd.conf
@@ -37,7 +37,9 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
-<bind port="6667,6668,6669"
+<bind address="127.0.0.1"
+      port="29583"
+      hook="haproxy"
       type="clients">
 
 
