添加HAProxy配置文件，重构inspircd README.md以支持新的HAProxy设置，删除旧的配置脚本和文件

--- a/ARKFUTURE/CONFIG/inspircd/conf/haproxy.cfg
+++ b/ARKFUTURE/CONFIG/inspircd/conf/haproxy.cfg
@@ -12,7 +12,7 @@ global
 # ======================== 默认配置 ========================
 defaults 
     log     global            # 继承全局日志配置 
-    timeout connect 5s       # 后端连接超时时间 
+    timeout connect 5s        # 后端连接超时时间 
     timeout client  30s       # 客户端超时时间 
     timeout server  30s       # 服务器端超时时间 
     retries 3                 # 失败重试次数 
@@ -21,6 +21,7 @@ defaults
 # ======================== 监控面板配置 ========================
 listen stats 
     bind *:8404               # 监控面板端口 
+    mode http
     stats enable 
     stats uri /haproxy?stats  # 监控页面URI 
     stats refresh 10s         # 自动刷新间隔 
@@ -38,9 +39,9 @@ frontend irc_ssl
     bind *:6697 ssl crt /path/to/your/cert.pem 
     default_backend irc_backend
 
-backend ircd_haproxy_plain
+backend irc_backend
     mode tcp
-    server inspircd 127.0.0.1:29583 send-proxy-v2
+    server inspircd 127.0.0.1:29989 send-proxy-v2
 
 
  
