更新inspircd和HAProxy配置，增强连接安全性并调整最大长度限制

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -75,7 +75,7 @@
          parent="Main"
          allow="*"
          usecloak="yes"
-         useconnectban="no"
+         useconnectban="yes"
          port="6697"
          requiressl="yes"
          usests="yes">
@@ -218,6 +218,7 @@
         maxreal="150"
         maxtopic="390"
         maxuser="10">
+# 最大长度限制
 #maxaway =离开消息.
 #maxchan =频道名称.
 #maxhost =主机名.
