--- a/ARKFUTURE/CONFIG/inspircd/conf/haproxy.cfg
+++ b/ARKFUTURE/CONFIG/inspircd/conf/haproxy.cfg
@@ -37,9 +37,13 @@ frontend irc
 frontend irc_ssl
     mode tcp
     bind *:6697 ssl crt /path/to/your/cert.pem 
-    default_backend irc_backend
+    default_backend irc_ssl_backend
 
 backend irc_backend
+    mode tcp
+    server inspircd 127.0.0.1:29988 send-proxy-v2
+
+backend irc_ssl_backend
     mode tcp
     server inspircd 127.0.0.1:29989 send-proxy-v2
 
