更新inspircd.conf，移除不必要的usests配置项以简化设置 删除ngircd.conf示例配置文件以减少冗余

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -77,8 +77,7 @@
          usecloak="yes"
          useconnectban="yes"
          port="6697"
-         requiressl="yes"
-         usests="yes">
+         requiressl="yes">
 
 #标记定义定位克隆时应查看的IP地址位数.此标记只能定义一次.
 <cidr ipv4clone="32"
