--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -48,7 +48,7 @@
          globalmax="3"
          hardsendq="1M"
          limit=""
-         localmax=""
+         localmax="50"
          maxchans=""
          maxconnwarn="no"
          pingfreq="2m"
@@ -102,7 +102,7 @@
        host=""
        autologin="strict"
        vhost=""
-       level="100">
+       level="90">
 <type name="GlobalOp"
        classes="OperChat BanControl HostCloak ServerLink"
        host=""
