--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -49,7 +49,7 @@
          globalmax="3"
          hardsendq="1M"
          limit=""
-         localmax=""
+         localmax="50"
          maxchans=""
          maxconnwarn="no"
          pingfreq="2m"
@@ -62,14 +62,13 @@
          password=""
          hash="bcrypt"
          usecloak="yes"
+         useconnectban="yes"
          modes="+cixwS"
          motd="motd">  
 
 <connect name="Basic"
          parent="Main"
          allow="*"
-         usecloak="yes"
-         useconnectban="yes"
          port="6667,6668,6669">
 
 #标记定义定位克隆时应查看的IP地址位数.此标记只能定义一次.
@@ -98,7 +97,7 @@
        host=""
        autologin="strict"
        vhost=""
-       level="100">
+       level="90">
 <type name="GlobalOp"
        classes="OperChat BanControl HostCloak ServerLink"
        host=""
@@ -342,7 +341,7 @@
 <module name="ircv3_labeledresponse">
 <module name="ircv3_msgid">
 <module name="ircv3_servertime">
-#<module name="ircv3_sts">
+<module name="ircv3_sts">
 <module name="joinflood">
 <module name="kicknorejoin">
 <module name="knock">
