--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -34,13 +34,13 @@
        class=""
        invalidchar="strip"
        length="32"
-       prefix="AFENet/"
-       suffix=""
+       prefix=""
+       suffix="AFENet"
        sanitize="yes">
 <cloak method="hmac-sha256"
        key="5LdTybtvP945DLgyHiMWVxti94hcJO"
-       prefix="AFENet"
-       suffix="IP"
+       prefix=""
+       suffix="AFENet"
        case="lower"
        hostparts="1"
        pathparts="0"
@@ -179,6 +179,10 @@
 
 # 配置SSL(如果让此项生效,需要自行编译和启用SSL模块,如果是安装了官方的安装包,此配置不生效)
 # 请自行参考官方配置后补充配置 对应模块:ssl_openssl 或 ssl_gnutls 和 ircv3_sts
+<sts host="*"
+     duration="30d"
+     port="6697"
+     preload="yes">
 
 
 #-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
