--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -179,9 +179,9 @@
          warnexpiring="1w"
          welcomemsg="no">
 <wsorigin allow="*">
-<websocket defaultmode="text"
-           nativeping="yes"
-           proxyranges="">
+<websocket defaultmode="text" 
+           nativeping="yes" 
+           proxyranges="*"> 
 
 
 #-#-#-#-#-#-#-#-#-#额外的模块配置-#-#-#-#-#-#-#-#
@@ -201,8 +201,9 @@
 <sslprofile name="Basic"
             provider="gnutls"
             certfile="&dir.config;/conf/ssl/cert.pem"
-            keyfile="&dir.config;/conf/ssl/key.pem"
-            priority="NORMAL">
+            keyfile="&dir.config;/conf/ssl/key.pem" 
+            priority="NORMAL"
+            requestclientcert="yes">
 <sts host="*"
      duration="30d"
      port="6697"
