--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -130,10 +130,7 @@
 
 #<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
 <dns enabled="yes"
-     server="8.8.8.8"
-     timeout="5s"
-     sourceip=""
-     sourceport="0">
+     timeout="5s">
 
 #<pid>标签定义了pid文件的位置.此标记只能定义一次.
 <pid file="/var/run/inspircd/inspircd.pid">
@@ -253,8 +250,8 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-#日志相关#-#-#-#-#-#-#-#-#-#-#-#
 <log method="file"
-     type="*"
-     level="warning"
+     type="* -USERINPUT -USEROUTPUT"
+     level="normal"
      target="&dir.log;/ircd.log"
      flush="200">
 
