--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -189,25 +189,41 @@
 
 # 配置SSL(如果让此项生效,需要自行编译和启用SSL模块,如果是安装了官方的安装包,此配置不生效)
 # 请自行参考官方配置后补充配置 对应模块:ssl_openssl 或 ssl_gnutls 和 ircv3_sts
-<gnutls onrehash="yes">
 <bind port="6697"
       protocols="all"
-      sslprofile="Basic"
+      sslprofile="Clients"
+      type="clients">
+<bind port="7000"
+      protocols="all"
+      sslprofile="Servers"
       type="clients">
 <bind port="6680"
       hook="websocket"
-      sslprofile="Basic"
+      sslprofile="Websocket"
       type="clients">
-<sslprofile name="Basic"
-            provider="gnutls"
-            certfile="&dir.config;/conf/ssl/cert.pem"
-            keyfile="&dir.config;/conf/ssl/key.pem" 
-            priority="NORMAL"
-            requestclientcert="yes">
+
 <sts host="*"
      duration="30d"
      port="6697"
      preload="yes">
+
+<gnutls onrehash="yes">
+<sslprofile name="Clients"
+            provider="gnutls"
+            certfile="&dir.config;/conf/ssl/cert.pem"
+            keyfile="&dir.config;/conf/ssl/key.pem" 
+            priority="NORMAL">
+<sslprofile name="Servers"
+            provider="gnutls"
+            certfile="&dir.config;/conf/ssl/cert.pem"
+            keyfile="&dir.config;/conf/ssl/key.pem"
+            priority="NORMAL">
+<sslprofile name="Websocket"
+            provider="gnutls"
+            certfile="&dir.config;/conf/ssl/cert.pem"
+            keyfile="&dir.config;/conf/ssl/key.pem"
+            priority="NORMAL"
+            requestclientcert="no">           
 
 
 #-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
