--- a/ARKFUTURE/CONFIG/other/AFEBOT.conf
+++ b/ARKFUTURE/CONFIG/other/AFEBOT.conf
@@ -380,7 +380,7 @@ supybot.drivers.poll: 1.0
 #
 # 默认值:
 ###
-supybot.externalIP:
+#supybot.externalIP:
 
 ###
 # 是否定期将配置和数据刷新到磁盘. 设为False时需手动维护配置文件一致性(注: 设为False后无法通过指令恢复)
