--- a/ARKFUTURE/CONFIG/other/AFEBOT.conf
+++ b/ARKFUTURE/CONFIG/other/AFEBOT.conf
@@ -648,7 +648,7 @@ supybot.nick: AFEBOT
 #
 # 默认值: %s` %s_
 ###
-supybot.nick.alternates: %s2 %s3
+supybot.nick.alternates: %s` %s_
 
 ###
 # 决定BOT写入进程ID的文件路径.若保持默认空值则不写入PID文件.修改此配置需重启生效.
