--- a/ARKFUTURE/CONFIG/other/AFEBOT.conf
+++ b/ARKFUTURE/CONFIG/other/AFEBOT.conf
@@ -578,7 +578,7 @@ supybot.networks.ARKFUTURE.sasl.username:
 #
 # 默认值: 
 ###
-supybot.networks.ARKFUTURE.servers: 127.0.0.1: 6668
+supybot.networks.ARKFUTURE.servers: 127.0.0.1:6668
 
 ###
 # 若不为空,决定连接该网络时使用的socks代理hostname: port.
