--- a/ARKFUTURE/CONFIG/other/AFEBOT.conf
+++ b/ARKFUTURE/CONFIG/other/AFEBOT.conf
@@ -578,7 +578,7 @@ supybot.networks.ARKFUTURE.sasl.username:
 #
 # 默认值: 
 ###
-supybot.networks.ARKFUTURE.servers: 127.0.0.1:6668
+supybot.networks.ARKFUTURE.servers: 127.0.0.1:6667
 
 ###
 # 若不为空,决定连接该网络时使用的socks代理hostname: port.
@@ -627,14 +627,14 @@ supybot.networks.ARKFUTURE.user: AFEBOT
 #
 # 默认值: 
 ###
-supybot.networks.ARKFUTURE.vhost: 
+supybot.networks.ARKFUTURE.vhost: ARKFUTURE
 
 ###
-# D在连接服务器之前确定BOT将绑定到哪个vhost
+# 确定在连接服务器之前确定BOT将绑定到哪个vhost
 #
 # 默认值: 
 ###
-supybot.networks.ARKFUTURE.vhostv6: 
+supybot.networks.ARKFUTURE.vhostv6: ARKFUTURE
 
 ###
 # 决定BOT的默认Nick.
@@ -801,7 +801,7 @@ supybot.plugins.Misc.public: True
 #
 # 默认值: [%H: %M: %S]
 ###
-supybot.plugins.Misc.timestampFormat: [%H: %M: %S]
+supybot.plugins.Misc.timestampFormat: [%H:%M:%S]
 
 ###
 # 决定是否默认加载此插件.
@@ -1022,71 +1022,71 @@ supybot.replies.databaseRecord: $Type #$id: $text (added by $username at $at)
 # 确定BOT在需要模糊处理错误时返回的通用错误信息.
 ###
 supybot.replies.error: An error has occurred and has been logged. Please\
-contact this bot's administrator for more\
-information.
+                       contact this bot's administrator for more\
+                       information.
 
 ###
 # 确定向所有者报告的模糊错误信息.
 ###
 supybot.replies.errorOwner: An error has occurred and has been logged. Check\
-the logs for more information.
+                            the logs for more information.
 
 ###
 # 确定当用户缺乏权限且未明确指定具体能力时的通用错误回复.
 ###
 supybot.replies.genericNoCapability: You're missing some capability you\
- need. This could be because you\
- actually possess the anti-capability\
- for the capability that's required of\
- you, or because the channel provides\
- that anti-capability by default, or\
- because the global capabilities include\
- that anti-capability. Or, it could be\
- because the channel or\
- supybot.capabilities.default is set to\
- False, meaning that no commands are\
- allowed unless explicitly in your\
- capabilities. Either way, you can't do\
- what you want to do.
+                                     need. This could be because you\
+                                     actually possess the anti-capability\
+                                     for the capability that's required of\
+                                     you, or because the channel provides\
+                                     that anti-capability by default, or\
+                                     because the global capabilities include\
+                                     that anti-capability. Or, it could be\
+                                     because the channel or\
+                                     supybot.capabilities.default is set to\
+                                     False, meaning that no commands are\
+                                     allowed unless explicitly in your\
+                                     capabilities. Either way, you can't do\
+                                     what you want to do.
 
 ###
 # 确定当用户尝试需要认证但凭据错误时的回复信息.
 ###
 supybot.replies.incorrectAuthentication: Your hostmask doesn't match or your\
- password is wrong.
+                                         password is wrong.
 
 ###
 # 确定当用户缺乏执行命令所需能力时的错误回复.
 ###
 supybot.replies.noCapability: You don't have the %s capability. If you think\
- that you should have this capability, be sure\
- that you are identified before trying again.\
- The 'whoami' command can tell you if you're\
- identified.
+                              that you should have this capability, be sure\
+                              that you are identified before trying again.\
+                              The 'whoami' command can tell you if you're\
+                              identified.
 
 ###
 # 确定当查询未知用户信息时的错误回复.
 ###
 supybot.replies.noUser: I can't find %s in my user database. If you didn't\
-give a user name, then I might not know what your\
-user is, and you'll need to identify before this\
-command might work.
+                        give a user name, then I might not know what your\
+                        user is, and you'll need to identify before this\
+                        command might work.
 
 ###
 # 确定当用户尝试执行需要注册但未被识别时, BOT回复的错误信息.
 ###
 supybot.replies.notRegistered: You must be registered to use this command.\
-If you are already registered, you must\
-either identify (using the identify command)\
-or add a hostmask matching your current\
-hostmask (using the "hostmask add" command).
+                               If you are already registered, you must\
+                               either identify (using the identify command)\
+                               or add a hostmask matching your current\
+                               hostmask (using the "hostmask add" command).
 
 ###
 # 确定当BOT认为你遇到了开发者未知的bug时发送的信息.
 ###
 supybot.replies.possibleBug: This may be a bug. If you think it is, please\
- file a bug report at\
- <https: //github.com/progval/Limnoria/issues>.
+                             file a bug report at\
+                             <https://github.com/progval/Limnoria/issues>.
 
 ###
 # 确定BOT向在频道中尝试执行本应私密操作的用户发送的错误信息.
@@ -1119,7 +1119,7 @@ supybot.reply.error.inPrivate: False
 #
 # 默认值: False
 ###
-supybot.reply.error.noCapability: True
+supybot.reply.error.noCapability: False
 
 ###
 # 确定是否通过NOTICE而非PRIVMSG发送错误信息.
@@ -1162,7 +1162,7 @@ supybot.reply.format.url: <%s>
 #
 # 默认值: False
 ###
-supybot.reply.inPrivate: True
+supybot.reply.inPrivate: False
 
 ###
 # 设置BOT回复的绝对最大长度(单位：字符).
