--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -193,16 +193,12 @@
       protocols="all"
       sslprofile="Clients"
       type="clients">
-<bind port="7000"
-      protocols="all"
-      sslprofile="Servers"
-      type="clients">
 <bind port="6680"
       hook="websocket"
       sslprofile="Websocket"
       type="clients">
 
-<sts host="*"
+<sts host=""
      duration="30d"
      port="6697"
      preload="yes">
@@ -212,18 +208,7 @@
             provider="gnutls"
             certfile="&dir.config;/conf/ssl/cert.pem"
             keyfile="&dir.config;/conf/ssl/key.pem" 
-            priority="NORMAL">
-<sslprofile name="Servers"
-            provider="gnutls"
-            certfile="&dir.config;/conf/ssl/cert.pem"
-            keyfile="&dir.config;/conf/ssl/key.pem"
-            priority="NORMAL">
-<sslprofile name="Websocket"
-            provider="gnutls"
-            certfile="&dir.config;/conf/ssl/cert.pem"
-            keyfile="&dir.config;/conf/ssl/key.pem"
-            priority="NORMAL"
-            requestclientcert="no">           
+            priority="NORMAL">         
 
 
 #-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
