--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -198,7 +198,7 @@
       sslprofile="Websocket"
       type="clients">
 
-<sts host=""
+<sts host="*"
      duration="5m"
      port="6697"
      preload="yes">
