--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -419,7 +419,7 @@
 <module name="uninvite">
 <module name="vhost">
 <module name="watch">
-#<module name="websocket">
+<module name="websocket">
 <module name="xline_db">
 
 ######Extra Modules
