--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -173,6 +173,11 @@
          backoff="2"
          maxbackoff="5m">
 
+<wsorigin allow="*">
+<websocket defaultmode="text" 
+           nativeping="yes" 
+           proxyranges="*"> 
+
 
 #-#-#-#-#-#-#-#-#-#额外的模块配置-#-#-#-#-#-#-#-#
 <maxmind file="&ConfPath;CC.mmdb">
