--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -62,6 +62,7 @@
          hash="bcrypt"
          usecloak="yes"
          useconnectban="yes"
+         modes="+cixwS"
          motd="motd">  
 
 <connect name="Basic"
