--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -199,8 +199,8 @@
       sslprofile="Websocket"
       type="clients">
 
-<sts host="*"
-     duration="5m"
+<sts host="*.example.com"
+     duration="10d"
      port="6697"
      preload="yes">
 
@@ -209,7 +209,13 @@
             provider="gnutls"
             certfile="&dir.config;/conf/ssl/cert.pem"
             keyfile="&dir.config;/conf/ssl/key.pem" 
-            priority="NORMAL">         
+            priority="NORMAL">
+<sslprofile name="Websocket"
+            provider="gnutls"
+            certfile="&dir.config;/conf/ssl/cert.pem"
+            keyfile="&dir.config;/conf/ssl/key.pem"
+            priority="NORMAL"
+            requestclientcert="no">
 
 
 #-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
