--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -439,7 +439,7 @@
 <module name="regex_posix">
 <module name="regex_re2">
 <module name="sqlite3">
-#<module name="ssl_gnutls">
+<module name="ssl_gnutls">
 #<module name="ssl_openssl">
 <module name="sslrehashsignal">
 
