--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -29,7 +29,7 @@ enabled = true
 address = 127.0.0.1
 port = 4444
 addresshelper = true
-outproxy = http://exit.stormycloud.i2p #or http://purokishi.i2p
+outproxy = http://false.i2p
 
 [socksproxy]
 enabled = true
@@ -63,13 +63,13 @@ name = I2Pd
 
 [reseed]
 verify = true
-urls = https://reseed.i2p-projekt.de/,https://reseed2.i2p.net/,https://reseed.stormycloud.org/,https://reseed-fr.i2pd.xyz/,https://reseed.i2pgit.org/,https://reseed.onion.im/,https://coconut.incognet.io/,https://banana.incognet.io/,https://i2p.ghativega.in/,https://www2.mk16.de/,https://i2p.novg.net/,https://reseed-pl.i2pd.xyz/,https://reseed.memcpy.io/,https://reseed.diva.exchange/,https://i2pseed.creativecowpat.net:8443/ 
+urls = https://reseed.i2p-projekt.de/,https://reseed2.i2p.net/,https://reseed.stormycloud.org/,https://reseed-fr.i2pd.xyz/,https://reseed.i2pgit.org/,https://reseed.onion.im/,https://coconut.incognet.io/,https://banana.incognet.io/,https://i2p.ghativega.in/,https://www2.mk16.de/,https://i2p.novg.net/,https://reseed-pl.i2pd.xyz/,https://reseed.memcpy.io/,https://reseed.diva.exchange/,https://i2pseed.creativecowpat.net:8443/,https://i2p.mooo.com/netDb/,https://netdb.i2p2.no/
 yggurls = http://[324:71e:281a:9ed3::ace]:7070/
-proxy = socks://127.0.0.1:5554
+#proxy = socks://127.0.0.1:5554
 
 [addressbook]
 defaulturl = http://shx5vqsw7usdaunyzr2qmes2fq37oumybpudrd4jjj4e4vk4uusa.b32.i2p/hosts.txt
-subscriptions = http://reg.i2p/hosts.txt,http://identiguy.i2p/hosts.txt,http://stats.i2p/cgi-bin/newhosts.txt,http://rus.i2p/hosts.txt
+subscriptions = http://reg.i2p/hosts.txt,http://identiguy.i2p/hosts.txt,http://stats.i2p/cgi-bin/newhosts.txt
 
 [persist]
 profiles = true
