--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -199,8 +199,8 @@
       sslprofile="Websocket"
       type="clients">
 
-<sts host="*.example.com"
-     duration="10d"
+<sts host="*"
+     duration="5m"
      port="6697"
      preload="yes">
 
