--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -216,6 +216,11 @@
             keyfile="&dir.config;/conf/ssl/key.pem"
             priority="NORMAL"
             requestclientcert="no">
+<sslprofile name="Server"
+            provider="gnutls"
+            certfile="&dir.config;/conf/ssl/cert.pem"
+            keyfile="&dir.config;/conf/ssl/key.pem" 
+            priority="NORMAL">
 
 
 #-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
