--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -179,7 +179,7 @@
          warnexpiring="1w"
          welcomemsg="no">
          
-<wsorigin allow="*">
+<wsorigin allow="https://*.*">
 <websocket defaultmode="text" 
            nativeping="yes" 
            proxyranges="*"> 
@@ -190,17 +190,8 @@
 
 # 配置SSL(如果让此项生效,需要自行编译和启用SSL模块,如果是安装了官方的安装包,此配置不生效)
 # 请自行参考官方配置后补充配置 对应模块:ssl_openssl 或 ssl_gnutls 和 ircv3_sts
-<bind port="6697"
-      protocols="all"
-      sslprofile="Clients"
-      type="clients">
-<bind port="6680"
-      hook="websocket"
-      sslprofile="Websocket"
-      type="clients">
-
 <sts host="*"
-     duration="10m"
+     duration="60d"
      port="6697"
      preload="yes">
 
@@ -216,7 +207,7 @@
             keyfile="&dir.config;/conf/ssl/key.pem"
             priority="NORMAL"
             requestclientcert="no">
-<sslprofile name="Server"
+<sslprofile name="Servers"
             provider="gnutls"
             certfile="&dir.config;/conf/ssl/cert.pem"
             keyfile="&dir.config;/conf/ssl/key.pem" 
