--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -14,15 +14,16 @@
 <path configdir="&dir.config;">
 
 # <define> 标记允许您定义一个实体(定义服务器变量).此标记可以根据需要定义多次.
-<define name="ConfPath"
-        value="conf/">
-<define name="TxtPath"
-        value="txt/">
+# 定义路径
+<define name="ConfPath" value="conf/">
+<define name="TxtPath" value="txt/">
+# 定义服务名域名
+<define name="Domain" value="arkfuture.test">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<server>标签定义了本地服务器的设置.此标记只能定义一次.
-<server name="arkfuture.test"
+<server name="&Domain;"
         description="ARKFUTURE-NET"
         network="ARKFUTURE"
         id="0AF">
@@ -158,7 +159,7 @@
 #-#-#-#-#-#-#-#-#-#-#-#安全配置#-#-#-#-#-#-#-#-#-#-#-#
 #<security>标签定义了与服务器安全相关的配置选项.此标记只能定义一次.
 <security announceinvites="dynamic"
-          customversion="Basic Config"
+          customversion=""
           genericoper="no"
           publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
           hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
@@ -189,7 +190,7 @@
 #<whowas>标签定义了/WHOWAS数据库的配置.此标记只能定义一次.
 <whowas groupsize="10"
         maxgroups="10000"
-        maxkeep="3d"
+        maxkeep="12h"
         nickupdate="yes">
 
 
@@ -207,17 +208,17 @@
         maxtopic="390"
         maxuser="10">
 # 最大长度限制
-#maxaway =离开消息.
-#maxchan =频道名称.
-#maxhost =主机名.
-#maxkey =通频道密钥.
-#maxkick =踢出消息.
-#maxmodes =单个MODE消息中可修改的非标记模式的最大数量.
-#maxnick =昵称.
-#maxquit =退出消息.
-#maxreal =真实的名称.
-#maxtopic =频道主题.
-#maxuser =用户名.
+#maxaway = 离开消息.
+#maxchan = 频道名称.
+#maxhost = 主机名.
+#maxkey = 通频道密钥.
+#maxkick = 踢出消息.
+#maxmodes = 单个MODE消息中可修改的非标记模式的最大数量.
+#maxnick = 昵称.
+#maxquit = 退出消息.
+#maxreal = 真实的名称.
+#maxtopic = 频道主题.
+#maxuser = 用户名.
 
 
 #<insane>标记定义了限制,以防止创建过宽的X线.此标记只能定义一次.
@@ -233,7 +234,7 @@
 <badnick nick="MemoServ" reason="为网络服务保留">
 
 #<badip>标签定义了永久Z线.此标记可以根据需要定义多次.
-<badip ipmask="255.255.255.255" reason="为防止攻击保留">
+<badip ipmask="172.16.0.0" reason="为防止攻击保留">
 
 #<badhost>标签定义了永久K线.此标记可以根据需要定义多次.
 <badhost host="*.example.com" reason="为防止攻击保留">
