--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -17,7 +17,7 @@
 # 定义路径
 <define name="ConfPath" value="conf/">
 <define name="TxtPath" value="txt/">
-# 定义服务名域名
+# 定义域名
 <define name="Domain" value="arkfuture.test">
 
 
