--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -1,4 +1,7 @@
 ## 基础配置
+tunconf = /etc/i2pd/tunnels.conf
+tunnelsdir = /etc/i2pd/tunnels.d
+certsdir = /usr/share/i2pd/certificates
 ipv4 = true
 ipv6 = true
 nat = true
@@ -62,8 +65,8 @@ yggurls = http://[324:71e:281a:9ed3::ace]:7070/
 
 [addressbook]
 defaulturl = http://shx5vqsw7usdaunyzr2qmes2fq37oumybpudrd4jjj4e4vk4uusa.b32.i2p/hosts.txt
-subscriptions = http://reg.i2p/hosts.txt,http://identiguy.i2p/hosts.txt,http://stats.i2p/cgi-bin/newhosts.txt
-
+subscriptions = http://reg.i2p/hosts.txt,http://identiguy.i2p/hosts.txt,http://stats.i2p/cgi-bin/newhosts.txt,http://rus.i2p/hosts.txt
+                
 [persist]
 profiles = true
 addressbook = true
