--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -1,11 +1,14 @@
-## 基础配置
+## 基础
 ipv4 = true
 ipv6 = true
 nat = true
 notransit = false
 floodfill = true
+
+## 日志
 log = true
 loglevel = warn
+logfile = /var/log/i2pd/i2pd.log
 
 ## 服务
 [ntcp2]
